--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Sreekar <sreekargv@gmail.com>"]
 readme = "README.md"
-
+package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.12,<3.14"
 langchain = "^0.3.26"
